2007-01-29  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Timer rescheduling: it is now possible to reschedule the period
	any particular Action is taken by issuing the command
		@bot.timer.reschedule(handle, new_period)
	where +handle+ is a timer handle returned by the @bot.timer.add() that
	created the action, and new_period is the new period for the Action.

2007-01-23  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Reduced saving: the salut, lart, and quotes plugin now only save
	their datafiles if anything changed since last time. This speeds up
	operations such as saving and rescanning; it also allow hand-editing
	of the data files while the bot is running, since a rescan will load
	the changed data files without overwriting them with a useless save
	before. Of course this only works if there are no pending changes in
	the running bot.

2007-01-12  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Server timeout: rework the server timeout code. Instead of PINGing
	the server unconditionally every server.ping_timeout seconds, we only
	PING it if we don't receive anything in the user-chosen timeout (lazy
	PING). The code rewrite also seems to have fixed the "bot stalling
	doing nothing" problem, which seemed to have been a consequence of
	@socket.select not having a timeout.

2006-11-01  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* SSL support: patch from Robin H. Johnson <robbat2@gentoo.org>

2006-10-28  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* A-Z game: try to guess the word the bot is thinking of: every miss
	helps by reducing the range of allowed words, until it's so small
	around the correct one that you can't miss it.

2006-10-27  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Flood protection: first attempt at penalty-based flood protection.
	This should make rbot much less prone to Excess Floods *and* still
	serve normally without excessive delays.

2006-10-25  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>
